python/src/user/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
spec:
  selector:
    app: user
  type: ClusterIP
  ports:
    - port: 8808
      targetPort: 8080
      protocol: TCP
