python/src/user/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-ingress
  annotations:
    nginx.ingress.kubernetes.ip/proxy-body-size: "0"
    nginx.ingress.kubernetes.ip/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.ip/proxy-send-timeout: "600"
spec:
  rules:
  - host: ems.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: user
            port: 
              number: 8080
